# nlp_esgi

./: .gitignore  README.md  demo.py  pyproject.toml  spliter.py
data/processed/: prediction.csv  test.csv  train.csv
data/raw/: train.csv
models/: vectorizer.pkl
src/: comic_extraction.py  evaluation.py  feature.py  llm_call.py  main.py  models.py  prompt_tester.py  prompts.py
