[project]
name = "nlp-esgi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "joblib>=1.4.2",
    "nltk>=3.9.1",
    "pandas>=2.3.2",
    "polars>=1.33.0",
    "scikit-learn>=1.7.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
